# turbo-journey

./: .env-example  README.md  main.py  pyproject.toml  requirements.txt
app/: chat.py
app/data/: meuarquivo.txt
app/models/: embeddings.py  vector_store.py
app/utils/: text_processing.py
