[project]
name = "lang-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "langchain-google-genai>=2.1.3",
    "langchain[openai]>=0.3.23",
    "sentence-transformers>=4.1.0",
]
